<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="20dip" >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:text="@string/app_info"
        android:textSize="20dip" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnStartRec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/start_recording" />

        <Button
            android:id="@+id/btnStopRec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/stop_recording" />
    </LinearLayout>

    <Button
        android:id="@+id/btnStartPlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_playing" />
    
    <Button
        android:id="@+id/btnStopPlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_playing" />

</LinearLayout>